2001-04-03  David Billinghurst <David.Billinghurst@riotinto.com>

	* baseboards/unix.exp: Don't link with -lm on cygwin.
	* lib/target.exp: Remove compiler warnings about -fpic or -fPIC on
	cygwin.

2001-02-21  Rob Savoye  <rob@slipknot.welcomehome.org>

	* debian/changelog: Add entry for new release.
	* debian/control: Fix problem with "no binary package" error.
	* debian/rules: Fix so things actually build a package. This was
	mostly installing the new html version of the doc, not an info
	page.
	* doc/Makefile.am: Build and install the rtf and ps versions
	of the manual. Remove all the created files and subdirectories.
	* doc/overview.sgml: Update the copyright message.
	* doc/ref.sgml: Update the copyright messages. Add section on
	obtaining DejaGnu releases.
	* doc/user.sgml: Update the copyright messages. Add blurb about
	the --mail option.
	* doc/overview: Regenerated.

2001-02-17  Rob Savoye  <rob@slipknot.welcomehome.org>

	* Most all files: Update copyright notices.
	* Makefile.am: Add support for making RPMs. Force different
	values for RUNTEST and RUNTESTFLAGS, so we can test ourselves.
	* testsuite/Makefile.am: Force a different value for
	RUNTESTFLAGS.
	* acinclude.m4, configure.in: Find Tclsh, and Docbook.
	* configure: Regenerated.
	* doc/Makefile.am: Use $DOCBOOK to find the filters.
	* doc/overview: Add the html version of the doc so one doesn't
	need docbook to read the manual.

2001-01-31  Rob Savoye  <rob@slipknot.welcomehome.org>

	* Merge in latest snapshot from RedHat.
	* example/calc/Makefile.am: New automake support.
	* example/calc/Makefile.in: Generated.
	* example/Makefile.am: Recursion support for make.
	* example/calc/Makefile.in: Generated by automake.
	* example/calc/calc.h.in: Move constants to calc.c, so we can use
	autoheader.
	* example/calc/calc.c: Add constants from calc.h.in.
	* redhat/dejagnu.spec: New RPM packaging file.
	* debian/{changelog,conffiles,control,copyright,postinst,preinst,