@@ -3,3 +3,6 @@
 AUTOMAKE_OPTIONS = dejagnu
 
 SUBDIRS = calc
+
+check-recursive:
+	@echo "No check target in examples"
